factor proxy_params properly

--- a/examples/authelia-static.conf
+++ b/examples/authelia-static.conf
@@ -1,6 +1,3 @@
-# trimmed down version of `authelia.conf` with no built-in upstream
-# proxying. requests require auth by default, unless "auth_request off" is
-# explicitly set somewhere.
 server {
     server_name example.com;
     include letsencrypt_ssl;
@@ -34,16 +31,9 @@ server {
 
         location /auth_verify {
             internal;
-            proxy_set_header Host $http_host;
+            include proxy_params;
 
-            proxy_set_header X-Original-Uri $request_uri;
-            proxy_set_header X-Original-Url $scheme://$http_host$request_uri;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $http_host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_intercept_errors off;
-
             proxy_pass_request_body off;
             proxy_set_header Content-Length "";
 
@@ -55,7 +45,6 @@ server {
             proxy_cache auth_cache;
             proxy_cache_valid 200 1m;
             proxy_cache_key "$scheme$proxy_host$realip_remote_addr$cookie_authelia_session";
-
         }
     }
 }
