--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     # don't leak nginx version, it might be vulnerable and found in a scan.
     server_tokens off;
 
-    include /etc/nginx/mime.types;
+    include /etc/nginx/snippets/mime.types;
     default_type application/octet-stream;
 
     # advice from https://cipherli.st/
