correct snippet path

--- a/examples/authelia.conf
+++ b/examples/authelia.conf
@@ -1,8 +1,8 @@
 # configured for authelia 3.7.1
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     set $authelia_login_url https://login.example.com;
     set $authelia_internal_url http://localhost:8929;
@@ -10,7 +10,7 @@ server {
     location / {
         proxy_pass http://localhost:8080;
 
-        include proxy_params;
+        include snippets/proxy_params;
 
         auth_request /auth_verify;
         auth_request_set $user $upstream_http_remote_user;
@@ -30,7 +30,7 @@ server {
 
         location /auth_verify {
             internal;
-            include proxy_params;
+            include snippets/proxy_params;
 
             proxy_intercept_errors off;
             proxy_pass_request_body off;
