--- a/examples/proxy.conf
+++ b/examples/proxy.conf
@@ -1,12 +1,12 @@
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     location / {
         proxy_pass localhost:8080;
 
         proxy_redirect $proxy_host https://$server_name/;
-        include proxy_params;
+        include snippets/proxy_params;
     }
 }
