--- a/examples/authelia-static.conf
+++ b/examples/authelia-static.conf
@@ -1,7 +1,7 @@
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     set $authelia_login_url https://login.example.com;
     set $authelia_internal_url http://localhost:8929;
@@ -24,7 +24,7 @@ server {
 
         location /auth_verify {
             internal;
-            include proxy_params;
+            include snippets/proxy_params;
 
             proxy_intercept_errors off;
             proxy_pass_request_body off;
