--- a/examples/domain-redirect.conf
+++ b/examples/domain-redirect.conf
@@ -1,7 +1,8 @@
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
+
     set $target_domain example2.com;
 
     location / {
