--- a/examples/php-fpm.conf
+++ b/examples/php-fpm.conf
@@ -1,8 +1,8 @@
 # install php-fpm which runs as a systemd service, php7.0-fpm.service
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     index index.php index.html index.htm;
 
