--- a/examples/static.conf
+++ b/examples/static.conf
@@ -1,7 +1,7 @@
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     location / {
         root /var/www/example.com/;
