--- a/examples/uwsgi.conf
+++ b/examples/uwsgi.conf
@@ -1,11 +1,11 @@
 server {
     server_name example.com;
-    include letsencrypt_ssl;
-    include server_defaults;
+    include snippets/letsencrypt_ssl;
+    include snippets/server_defaults;
 
     location / {
         uwsgi_pass unix:///tmp/uwsgi.sock;
-        include uwsgi_params;
+        include snippets/uwsgi_params;
     }
 
     location /static/ {
