do not use variable to load cert

--- a/examples/authelia.conf
+++ b/examples/authelia.conf
@@ -1,7 +1,9 @@
 # configured for authelia 3.7.1
 server {
     server_name example.com;
-    include snippets/letsencrypt_ssl;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+
     include snippets/server_defaults;
 
     set $authelia_login_url https://login.example.com;
