--- a/examples/php-fpm.conf
+++ b/examples/php-fpm.conf
@@ -1,7 +1,9 @@
 # install php-fpm which runs as a systemd service, php7.0-fpm.service
 server {
     server_name example.com;
-    include snippets/letsencrypt_ssl;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+
     include snippets/server_defaults;
 
     index index.php index.html index.htm;
