--- a/examples/authelia-static.conf
+++ b/examples/authelia-static.conf
@@ -1,6 +1,8 @@
 server {
     server_name example.com;
-    include snippets/letsencrypt_ssl;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+
     include snippets/server_defaults;
 
     set $authelia_login_url https://login.example.com;
