print domain + fix url prefix

--- a/examples/proxy.conf
+++ b/examples/proxy.conf
@@ -6,7 +6,7 @@ server {
     include snippets/server_defaults;
 
     location / {
-        proxy_pass localhost:8080;
+        proxy_pass http://localhost:8080;
 
         proxy_redirect $proxy_host https://$server_name/;
         include snippets/proxy_params;
