some improvements from mattermost config

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,12 +23,13 @@ http {
 
     # advice from https://cipherli.st/
     ssl_prefer_server_ciphers on;
-    ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols  TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     # note ssl_ecdh_curve is disabled for GRPC support OOTB. This is considered
     # OK as it does not affect the ssllabs report (A+)
     #ssl_ecdh_curve secp384r1;
-    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
     ssl_stapling on;
     ssl_stapling_verify on;
@@ -53,6 +54,7 @@ http {
     proxy_send_timeout 25h;
     grpc_read_timeout 25h;
     grpc_send_timeout 25h;
+    send_timeout 300;
 
     # useful default zones
     # ... general rate limit to mitigate DoS attacks (not DDoS)
