add error page comment

--- a/examples/authelia.conf
+++ b/examples/authelia.conf
@@ -20,6 +20,8 @@ server {
         set $target_url $scheme://$http_host$request_uri;
 
         proxy_intercept_errors on;
+        # Note that defining any error_page here unmaps all error pages defined
+        # in server_defaults
         error_page 401 =302 $authelia_login_url?rd=$target_url;
 
         # Hide authelia cookie from upstream to prevent possible session stealing attack.
