--- a/examples/authelia-static.conf
+++ b/examples/authelia-static.conf
@@ -14,6 +14,8 @@ server {
         auth_request_set $groups $upstream_http_remote_groups;
         set $target_url $scheme://$http_host$request_uri;
 
+        # Note that defining any error_page here unmaps all error pages defined
+        # in server_defaults
         error_page 401 =302 $authelia_login_url?rd=$target_url;
 
         # Hide authelia cookie from upstream to prevent possible session stealing attack.
