--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ events {
 }
 
 http {
+    gzip on;  # https://community.qualys.com/blogs/securitylabs/2013/09/10/is-beast-still-a-threat
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -43,10 +44,6 @@ http {
     # allow near-real-time monitoring.
     access_log /var/log/nginx/access.log combined buffer=32k flush=1s;
     error_log /var/log/nginx/error.log;
-
-    # disable due to BREACH attack :-(
-    #gzip on;
-    gzip off;
 
     # long timeouts for long-running connections that don't do anything for a
     # while.
