also gzip json, svg

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ events {
 
 http {
     gzip on;  # https://community.qualys.com/blogs/securitylabs/2013/09/10/is-beast-still-a-threat
+    gzip_types text/html application/json image/svg+xml;
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
