--- a/examples/static.conf
+++ b/examples/static.conf
@@ -6,7 +6,9 @@ server {
     include snippets/server_defaults;
 
     location / {
+        include snippets/client_cache_images;
         root /var/www/example.com/;
+        include snippets/client_cache_images;
     }
 }
 
