static caching discussion/example

--- a/examples/static.conf
+++ b/examples/static.conf
@@ -9,6 +9,24 @@ server {
         include snippets/client_cache_images;
         root /var/www/example.com/;
         include snippets/client_cache_images;
+
+        # Main context can be cached for an hour, public meaning CDNs can also
+        # cache it. Setting it to a short time allows CDNs to take the majority
+        # of the traffic given a surge, whilst still allowing for relatively quick
+        # updates.
+        #
+        # Whilst nginx can set the expires header automatically and using nice
+        # units, the newer (HTTP/1.1) Cache-Control header is preferred as it
+        # prevents expiry spikes and takes precedence anyway.
+        #
+        # See https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control
+        add_header Cache-Control "public, max-age=3600, must-revalidate";
+
+        location ~* \.(?:ico|gif|jpe?g|png|svg)$ {
+            # images generally don't change so they can be cached for a long
+            # time. Most have hashes in file name with hugo.
+            add_header Cache-Control "public, max-age=31556952, immutable";
+        }
     }
 }
 
