fix security headers, which were being ignored

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,9 +36,7 @@ http {
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver_timeout 5s;
-    add_header X-Frame-Options "DENY";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
+
     ssl_dhparam dhparams.pem;
 
     # buffer to increase performance under load. Flush after only one second to
@@ -71,6 +69,11 @@ http {
 
     # used for auth_request
     proxy_cache_path auth_cache/ keys_zone=auth_cache:10m;
+
+    # note that setting any header further in the hierarchy will prevent all of
+    # these from being sent.
+    include snippets/security_headers;
+
 
     server {
         listen 80 default_server;
