keepalive timeout setting

--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,9 @@ http {
     grpc_send_timeout 25h;
     send_timeout 300;
 
+    # a recent addition to nginx, should be greater than the above so they're effective
+    keepalive_timeout 26h;
+
     # useful default zones
     # ... general rate limit to mitigate DoS attacks (not DDoS)
     limit_req_zone $binary_remote_addr zone=default:10m rate=10r/s;
