switch to journald for logging

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,10 +38,9 @@ http {
 
     ssl_dhparam dhparams.pem;
 
-    # buffer to increase performance under load. Flush after only one second to
-    # allow near-real-time monitoring.
-    access_log /var/log/nginx/access.log combined buffer=32k flush=1s;
-    error_log /var/log/nginx/error.log;
+    # log using systemd journald like everything else. Journald is great at rotation, storage, performance etc.
+    error_log syslog:server=unix:/dev/log;
+    access_log syslog:server=unix:/dev/log combined_host;
 
     # long timeouts for long-running connections that don't do anything for a
     # while.
