remove combined_host

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
 
     # log using systemd journald like everything else. Journald is great at rotation, storage, performance etc.
     error_log syslog:server=unix:/dev/log;
-    access_log syslog:server=unix:/dev/log combined_host;
+    access_log syslog:server=unix:/dev/log;
 
     # long timeouts for long-running connections that don't do anything for a
     # while.
