add more types to gzip and min size

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,8 @@ events {
 
 http {
     gzip on;  # https://community.qualys.com/blogs/securitylabs/2013/09/10/is-beast-still-a-threat
-    gzip_types text/html application/json image/svg+xml;
+    gzip_types text/html application/json image/svg+xml text/javascript text/xml text/plain application/javascript application/xml;
+    gzip_min_length 2000;
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
